namespace-inheritance/config/namespaces/eng/network-policy-allow-gamestore-ingress.yaml
# Copyright 2021 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
# creates namespace named "hello"
# [START anthos_config_management_namespace_inheritance_config_namespaces_eng_network_policy_allow_gamestore_ingress] 
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-gamestore-ingress
spec:
  podSelector:
    matchLabels:
      app: gamestore
  ingress:
    - {}
# [END anthos_config_management_namespace_inheritance_config_namespaces_eng_network_policy_allow_gamestore_ingress]
